# Zephyr_Openthread

zephyr_lmtltd_light/applications/app-minimal/: CMakeLists.txt  README.md
zephyr_lmtltd_light/applications/app-minimal/src/: main.c
zephyr_lmtltd_light/applications/cc-app-minimal/: CMakeLists.txt  app.overlay  prj.conf  sample.yaml
zephyr_lmtltd_light/applications/cc-app-minimal/src/: main.c
zephyr_lmtltd_light/applications/zephyr_rust/: .gitignore  CMakeLists.txt  README.md  sample.yaml
zephyr_lmtltd_light/applications/zephyr_rust/rust/: Cargo.toml  lib.rs  rust_header.h
zephyr_lmtltd_light/applications/zephyr_rust/src/: main.c
zephyr_lmtltd_light/lmtlib_light/: .gitignore  CMakeLists.txt  Kconfig  README.md  west.yml
zephyr_lmtltd_light/lmtlib_light/boards/arm/SOIKA/: Kconfig.board  Kconfig.defconfig  SOIKA.dts  SOIKA.yaml  bb-header.dtsi  board.cmake
zephyr_lmtltd_light/lmtlib_light/boards/arm/SOVA/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  SOVA407VE.dts  SOVA407VE.yaml  SOVA407VE_defconfig  SOVA407VG.dts  SOVA407VG.yaml  SOVA407VG_1_2_0.overlay  SOVA407VG_defconfig  SOVA427VI.dts  SOVA427VI_defconfig  SOVA4x.dts  bb-header.dtsi  board.cmake  pins.c  revision.cmake
zephyr_lmtltd_light/lmtlib_light/boards/arm/SOVA105/: Kconfig.board  Kconfig.defconfig  SOVA105-pinctrl.dtsi  SOVA105.dts  SOVA105.yaml  SOVA105_defconfig  STM32F105xx.svd  bb-header.dtsi  board.cmake  pins.c
zephyr_lmtltd_light/lmtlib_light/docs/: bb-header_template.dtsi  bbarch.pptx
zephyr_lmtltd_light/lmtlib_light/drivers/: CMakeLists.txt  Kconfig
zephyr_lmtltd_light/lmtlib_light/drivers/misc/: CMakeLists.txt  Kconfig
zephyr_lmtltd_light/lmtlib_light/drivers/misc/adg708/: adg708.c
zephyr_lmtltd_light/lmtlib_light/drivers/w1/: CMakeLists.txt  Kconfig  Kconfig.zephyr_stm32_tim  w1_zephyr_gpio.c  w1_zephyr_stm32_tim.c
zephyr_lmtltd_light/lmtlib_light/dts/bindings/adc/: ti,ads131e08.yaml  ti,ads8698.yaml
zephyr_lmtltd_light/lmtlib_light/dts/bindings/capture_compare/: capture_compare_stm32.yaml
zephyr_lmtltd_light/lmtlib_light/dts/bindings/kscan/: ti,ads7843.yaml
zephyr_lmtltd_light/lmtlib_light/dts/bindings/misc/: lmt,hdlc-serial.yaml
zephyr_lmtltd_light/lmtlib_light/dts/bindings/modem/: lmt,sim7500e.yaml  lmt,sim868e.yaml
zephyr_lmtltd_light/lmtlib_light/dts/bindings/pinctrl/: adi,adg708.yaml
zephyr_lmtltd_light/lmtlib_light/dts/bindings/radio/: basic_radio_device.yaml  radio_controller.yaml  radio_gpio.yaml  radio_io_stm32.yaml  ti,cc1200-radio.yaml
zephyr_lmtltd_light/lmtlib_light/dts/bindings/w1/: zephyr,w1-gpio.yaml  zephyr,w1-stm32-tim.yaml
zephyr_lmtltd_light/lmtlib_light/include/zephyr/drivers/: capture_compare.h  lmt_sim868e.h  (+3 more)
zephyr_lmtltd_light/lmtlib_light/subsys/: CMakeLists.txt  Kconfig
zephyr_lmtltd_light/lmtlib_light/subsys/lmt_settings/: CMakeLists.txt  Kconfig  lmt_settings.c
zephyr_lmtltd_light/lmtlib_light/tests/lmt_settings/: CMakeLists.txt  prj.conf  testcase.yaml
(+44 files in other folders)
